infrastructure/02-auth-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  labels:
    app: auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      annotations:
        prometheus.io/port: "9000"
        prometheus.io/path: "/metrics"
        prometheus.io/scrape: "true"
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: youssefjj/twitter-clone-auth-service_v2:latest
        resources:
          limits:
            memory: "512Mi"
            cpu: "400m"
        ports:
        - containerPort: 9000
