infrastructure/02-auth-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/auth"
          backend:
            service:
              name: auth-service
              port: 
                number: 80
        - pathType: Prefix
          path: "/tweet"
          backend:
            service:
              name: tweet-service
              port: 
                number: 80
        - pathType: Prefix
          path: "/metrics"
          backend:
            service:
              name: prometheus-server
              port: 
                number: 80
